--- a/home.html
+++ b/home.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-   <h2>test</h2>
+   <form action="">
+    <input type="text" name="nom" placeholder="nom">
+    <input type="text" name="prenom" placeholder="prenom">
+    <input type="text" name="mail" placeholder="email">
+    <input type="text" name="telephone" placeholder="telephone">
+    <input type="text" name="adresse" placeholder="adresse">
+   <button type="button">Submit</button>
+   </form>
 </body>
 </html>
