creation page acceuil et formulaire inscription

--- a/home.html
+++ b/home.html
@@ -10,20 +10,8 @@
 <body>
     <h1>Hello</h1>
    
-
-   <h3>hello world</h3>
-
-
-   <h5>modif de ma branch</h5>
-
-   <form action="">
-    <input type="text" name="nom" placeholder="nom">
-    <input type="text" name="prenom" placeholder="prenom">
-    <input type="text" name="mail" placeholder="email">
-    <input type="text" name="telephone" placeholder="telephone">
-    <input type="text" name="adresse" placeholder="adresse">
-   <button type="button">Submit</button>
-   </form>
+    <p>Terensse-Fit vous donne la possibilité de vous mettre en forme comme vous le souhaitez, en vous proposant différents abonnements. Choisissez celui qui correspond à vos besoins et Go For It ! </p>
+   
 
 </body>
 </html>
