--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello</h1>
    
-    <p>Terensse-Fit vous donne la possibilité de vous mettre en forme comme vous le souhaitez, en vous proposant différents abonnements. Choisissez celui qui correspond à vos besoins et Go For It ! </p>
+    <p>Terence-Fit vous donne la possibilité de vous mettre en forme comme vous le souhaitez, en vous proposant différents abonnements. Choisissez celui qui correspond à vos besoins et Go For It ! </p>
    
 
 </body>
