--- a/home.html
+++ b/home.html
@@ -12,6 +12,12 @@
    
     <p>Terence-Fit vous donne la possibilité de vous mettre en forme comme vous le souhaitez, en vous proposant différents abonnements. Choisissez celui qui correspond à vos besoins et Go For It ! </p>
    
+    <h3>Bienvenue à Sport c'est cool</h3>
+
+    <p>
+        Vous vous sentez mal dans votre peau, vous vous sentez gros, votre appétence pour les Big Mac vous tiraille.
+        Laissez notre coach remodeler votre corps et inscrivez-vous au formulaire ci-joint
+    </p>
 
 </body>
 </html>
