--- a/register.html
+++ b/register.html
@@ -9,15 +9,14 @@
 </head>
 <body>
     <h1>formulaire d'information</h1>
-    <div class="header_form">
-    <form action="">
-        <input type="text" name="nom" placeholder="nom">
-        <input type="text" name="prenom" placeholder="prenom">
-        <input type="text" name="mail" placeholder="email">
-        <input type="text" name="telephone" placeholder="telephone">
-        <input type="text" name="adresse" placeholder="adresse">
-        <button type="button">Submit</button>
+    <form class="form_footer">
+        <div class="form">
+            <input type="text" class="input" for="name" placeholder="Nom" />
+            <input type="text"  class="input" for="name" placeholder="Adresse e-mail" />
+            <textarea rows=10 class="input" placeholder="Votre message"></textarea>
+            <button class="button">Me Contacter</button>
+        </div>
     </form>
-    </div>
+    
 </body>
 </html>
