--- a/home.html
+++ b/home.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <div class="body_container">
     <h1>Hello</h1>
    
     <p>Terence-Fit vous donne la possibilité de vous mettre en forme comme vous le souhaitez, en vous proposant différents abonnements. Choisissez celui qui correspond à vos besoins et Go For It ! </p>
    <br>
    <br>
-    <img src="png-clipart-bodybuilding-graphics-fitness-centre-logo-bodybuilding-physical-fitness-logo-removebg-preview.png" alt="">
+    <img class="musclor" src="png-clipart-bodybuilding-graphics-fitness-centre-logo-bodybuilding-physical-fitness-logo-removebg-preview.png" alt="">
     <h3>Bienvenue à Sport c'est cool</h3>
 
     <p>
         Vous vous sentez mal dans votre peau, vous vous sentez gros, votre appétence pour les Big Mac vous tiraille.
         Laissez notre coach remodeler votre corps et inscrivez-vous au formulaire ci-joint
     </p>
-
+</div>
 </body>
 </html>
