--- a/home.html
+++ b/home.html
@@ -21,6 +21,10 @@
         Vous vous sentez mal dans votre peau, vous vous sentez gros, votre appétence pour les Big Mac vous tiraille.
         Laissez notre coach remodeler votre corps et inscrivez-vous au formulaire ci-joint
     </p>
+     <button type="submit">
+        <a href="register.html">page suivante</a>
+    </button>
+    
 </div>
 </body>
 </html>
